CatInfoPage Mirrors DogInfoPage. Comments out border lines

--- a/src/components/DogInfoCard/DogInfoCard.scss
+++ b/src/components/DogInfoCard/DogInfoCard.scss
@@ -1,6 +1,6 @@
 
 .dog-info-card {
-    border: 1px solid red;
+    // border: 1px solid red;
     display: flex;
     justify-content: space-between;
     max-width: 80%;
@@ -22,7 +22,7 @@ span {
 .image-size {
     height: 500px;
     width: 670px;
-    border: 1px solid red;
+    // border: 1px solid red;
     object-fit: cover;
     object-position: top;
 }
