changes like style

--- a/src/components/PostShowItem/PostShowItem.scss
+++ b/src/components/PostShowItem/PostShowItem.scss
@@ -20,10 +20,10 @@
     align-items: center;
     background-color: #dbdbdb;
     border-radius: 20px;
-    padding: 15px;
+    padding: 10px 20px;
     border: 1px solid black ;
     height: fit-content;
-    gap: 5px;
+    gap: 10px;
 }
 
 .like-component {
