--- a/src/components/PostShowItem/PostShowItem.scss
+++ b/src/components/PostShowItem/PostShowItem.scss
@@ -11,6 +11,11 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+
+p.post-text {
+    display: grid; 
+    grid-template-columns: 60rem;
     
 }
 
@@ -31,23 +36,35 @@
     gap: 40px;
 }
 
-.post-text {
-    display: flex; 
-    align-items: center;
-}
 
 button {
   cursor: pointer;
-  font-size: 1rem;
   border-radius: 20px;
-  padding: 0.6em 1em;
-  transition: all 0.3s ease;
+  padding: 10px;
 }
 
 .comment-box {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 60rem;
     background-color: #dbdbdb;
     border-radius: 10px;
+    height: 90px;
     width: 90vw;
+    min-height: 80px;
+    resize: vertical;
+    box-shadow: 5px 5px 7px 1px rgba(142, 142, 142, 0.5);
+}
+
+.comment-section {
+    position: relative;
+}
+
+.comment-button {
+    background-color: #dbdbdb;
+    border: 1px solid black;
+    display: flex;
+    padding: 2px 20px;
+    position: absolute;
+    bottom: 5px;
+    right: 10px;  
 }
