--- a/src/components/PostShowItem/PostShowItem.scss
+++ b/src/components/PostShowItem/PostShowItem.scss
@@ -13,9 +13,11 @@
     flex-direction: column;
 }
 
-p.post-text {
-    display: grid; 
-    grid-template-columns: 60rem;
+.post-text {
+    display: flex; 
+    padding: 5px;
+    max-width: 80%;
+    font-size: 16px;
     
 }
 
@@ -49,7 +51,7 @@ button {
     background-color: #dbdbdb;
     border-radius: 10px;
     height: 90px;
-    width: 90vw;
+    width: 80vw;
     min-height: 80px;
     resize: vertical;
     box-shadow: 5px 5px 7px 1px rgba(142, 142, 142, 0.5);
