--- a/src/components/PostShowItem/PostShowItem.scss
+++ b/src/components/PostShowItem/PostShowItem.scss
@@ -75,11 +75,10 @@ button {
 .icons {
   display: flex;
   gap: 5px; 
-//   border: 1px solid red;
+  border: 1px solid red;
   position: absolute;
   z-index: 10;
   top: -25px; 
- 
 }
 
 .icons-comment-input {
