--- a/src/components/SaveIcon/SaveIcon.scss
+++ b/src/components/SaveIcon/SaveIcon.scss
@@ -1,4 +1,5 @@
-.saved {
-    background-color: #b82929;
-    
+.save-icon-container {
+    width: fit-content;
+    display: flex;
+    gap: 5px;
 }
