--- a/src/components/PostList/PostList.scss
+++ b/src/components/PostList/PostList.scss
@@ -1,5 +1,5 @@
 .post-container {
-    border: 1px solid red;
+    // border: 1px solid red;
     display: flex;
     flex-direction: column;
     width: 80vw;
