--- a/src/screens/Home/Home.scss
+++ b/src/screens/Home/Home.scss
@@ -69,6 +69,10 @@
 .saved-section {
     display: flex;
     margin: 3rem;
+    margin-left: 0;
+    margin-bottom: 5rem;
+    gap: 1rem;
+    justify-content: space-between;
 }
 
 .save-heading-div {
@@ -76,14 +80,17 @@
     align-items: start;
     gap: 10px;
 
-    h2{
+    h2 {
         margin-top: 0;
     }
 }
 
 .resource-container {
-    border: 1px solid red;
+    // border: 1px solid red;
     width: 60vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
     img {
         height: 80px;
@@ -91,7 +98,7 @@
     }
 
     .resource-item {
-        border: 1px solid blue;
+        // border: 1px solid blue;
         display: flex;
         gap: 1rem;
         background-color: #dbdbdb;
@@ -100,4 +107,29 @@
         padding: 1rem;
         box-shadow: 5px 5px 6px 1px rgba(142, 142, 142, 0.5);
     }
+}
+
+.reflections-section {
+    display: flex;
+    margin: 3rem;
+    margin-left: 0;
+    gap: 1rem;
+    justify-content: space-between;
+}
+
+.comments-container {
+    width: 60vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.comment-item {
+    display: flex;
+    flex-direction: column;
+    background-color: #dbdbdb;
+    width: 100%;
+    border-radius: 1.2rem;
+    padding: 1rem;
+    box-shadow: 5px 5px 6px 1px rgba(142, 142, 142, 0.5);
 }
