--- a/src/screens/Home/Home.scss
+++ b/src/screens/Home/Home.scss
@@ -117,7 +117,7 @@
     justify-content: space-between;
 }
 
-.comments-container {
+.comments-container-home {
     width: 60vw;
     display: flex;
     flex-direction: column;
