--- a/src/components/CommentListItem/CommentListItem.scss
+++ b/src/components/CommentListItem/CommentListItem.scss
@@ -1,4 +1,5 @@
 .comment-container {
+    border: 1px solid red;
     position: relative;
     display: grid;
     grid-template-columns: 60rem;
@@ -8,7 +9,7 @@
     height: fit-content;
     width: 80vw;
     min-height: 80px;
-    box-shadow: 5px 5px 7px 1px rgba(142, 142, 142, 0.5);
+    box-shadow: 5px 5px 7px 1px #8e8e8e80;
     padding: 1rem;
 }
 
