--- a/src/components/CommentListItem/CommentListItem.scss
+++ b/src/components/CommentListItem/CommentListItem.scss
@@ -1,5 +1,5 @@
 .comment-container {
-    border: 1px solid red;
+    // border: 1px solid red;
     position: relative;
     display: grid;
     grid-template-columns: 60rem;
