--- a/src/components/SignUpForm/SignUpForm.scss
+++ b/src/components/SignUpForm/SignUpForm.scss
@@ -22,10 +22,17 @@ body {
   width: 50%;
   height: 80%;
   margin: 4em auto;
-  border: 2px solid #8e8e8e;
-  border-radius: 6px;
+  background-color: #dbdbdb;
+  border-radius: 2rem;
   box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.3);
   transition: all 2s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  a {
+    color: #C19369;
+  }
 }
 
 .form-container .danger {
@@ -49,7 +56,7 @@ body {
   padding: 0.6em 1em;
   margin: 0.5em auto;
   font-size: 1rem;
-  border-radius: 3px;
+  border-radius: 16px;
   border: 2px solid #e0e0e0;
   outline: none;
   transition: all 0.4s ease;
@@ -67,8 +74,9 @@ body {
 .form-container form button {
   width: 50%;
   margin: 1em auto;
-  background: #8e8e8e;
+  background: rgba(193, 147, 105, 0.5);
   border: none;
+  transition: 0.3s;
 }
 
 .form-container form button:hover {
@@ -81,4 +89,9 @@ body {
 
 .form-container form label {
   margin-top: 0.6em;
+}
+
+.fetch-heading {
+  display: flex;
+  gap: 10px;
 }
