fix minor bugs with deployment

--- a/src/screens/Home/Home.scss
+++ b/src/screens/Home/Home.scss
@@ -106,6 +106,7 @@
         border-radius: 1.2rem;
         padding: 1rem;
         box-shadow: 5px 5px 6px 1px rgba(142, 142, 142, 0.5);
+        cursor: pointer;
     }
 }
 
