--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -17,6 +17,16 @@
     height: 80%;
     width: 100%;
     max-width: 75vw;
+
+    .breed-link {
+        padding: 10px;
+        font-size: 20px;
+        padding-left: 1rem;
+
+        &:hover{
+            background-color: lightgray;
+        }
+    }
 }
 
 .logo {
@@ -62,7 +72,6 @@ h1 {
     overflow: scroll;
     background-color: var(--nav-blue);
     border-radius: 0 0 1rem 1rem;
-    padding: 1rem;
     z-index: 10;
 }
 
