--- a/src/components/SignUpForm/SignUpForm.scss
+++ b/src/components/SignUpForm/SignUpForm.scss
@@ -68,7 +68,7 @@ body {
 }
 
 .form-container form input:valid {
-  border: 2px solid #66bb6a;
+  border: 2px solid rgba(193, 147, 105, 0.5);
 }
 
 .form-container form button {
@@ -77,6 +77,7 @@ body {
   background: rgba(193, 147, 105, 0.5);
   border: none;
   transition: 0.3s;
+  padding: 10px !important; 
 }
 
 .form-container form button:hover {
