--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Neuton&family=Work+Sans&display=swap');
+
+* {
+    font-family: 'Neuton', serif;
+    font-family: 'Work Sans', sans-serif;
+}
+
 .outer-div {
     // border: 1px solid red;
     background-color: var(--nav-blue);
@@ -29,18 +36,22 @@
     }
 }
 
+
 .logo {
     height: 150px;
     margin-bottom: 2rem;
     // border: 1px solid red;
 }
 
+
 .arrow {
     height: 15px;
+    
 }
 
 h1 {
     font-size: 30px;
+    font-weight: 300;
     // margin-bottom: 0;
 }
 
@@ -82,4 +93,10 @@ a {
 
 .log-out-link:hover {
     cursor: pointer;
+}
+
+.create-account {
+    display: flex;
+    align-items: end;
+    gap: 25px;
 }
