--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Neuton&family=Work+Sans&display=swap');
+
 :root {
 	--nav-blue: #6997C1;
 	--secondary-gray: #8E8E8E;
@@ -5,7 +7,8 @@
 
 * {
 	box-sizing: border-box;
-	font-family: Arial;
+	font-family: 'Neuton', serif;
+	font-family: 'Work Sans', sans-serif;
 }
 
 .hidden {
@@ -15,3 +18,5 @@
 body {
 	margin-bottom: 5rem;
 }
+
+
