changes to proper font

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Neuton&family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Klee+One&display=swap');
 
 * {
-    font-family: 'Neuton', serif;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Klee One', cursive;
 }
 
 .outer-div {
