--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Neuton&family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Klee+One&display=swap');
 
 :root {
 	--nav-blue: #6997C1;
@@ -7,8 +7,7 @@
 
 * {
 	box-sizing: border-box;
-	font-family: 'Neuton', serif;
-	font-family: 'Work Sans', sans-serif;
+	font-family: 'Klee One', cursive;
 }
 
 .hidden {
@@ -20,3 +19,6 @@ body {
 }
 
 
+input {
+	border-radius: 10px;
+}
