as close to the mock-up as possible. morning errands lol

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -45,6 +45,7 @@
 
 .arrow {
     height: 15px;
+    margin-top: 12px;
     
 }
 
@@ -99,3 +100,4 @@ a {
     align-items: end;
     gap: 25px;
 }
+
